--- a/source/app/components/wi-explorer-treeview/wi-explorer-treeview.html
+++ b/source/app/components/wi-explorer-treeview/wi-explorer-treeview.html
@@ -3,7 +3,9 @@
 	contextmenuholder="{{wiExplorerTreeview.contextmenuholder}}"
 	config='wiExplorerTreeview.config'
 	onclickfunction='wiExplorerTreeview.onClick'
+	ondoubleclickfunction='wiExplorerTreeview.onDoubleClick'
 	container='wiExplorerTreeview.container'
 	showcontextmenufunction='wiExplorerTreeview.showContextMenu'
+	getitemactivenamefunction='wiExplorerTreeview.getItemActiveName'
 	>
 </wi-base-treeview>
