--- a/source/components/wi-base-treeview/wi-base-treeview.html
+++ b/source/components/wi-base-treeview/wi-base-treeview.html
@@ -5,43 +5,41 @@
     <div class="wi-parent-node" type="{{wiBaseTreeview.config[$index].type}}"
         ng-class='{"item-active": item.data.selected}'
         data="{{wiBaseTreeview.config[$index].id}}"
-        wi-right-click="wiBaseTreeview.onclickfunction($index, $event); wiBaseTreeview.showcontextmenufunction($event, $index)"
-        wi-element-ready="wiBaseTreeview.onReady()">
+        wi-right-click="wiBaseTreeview.onClick($index, $event); wiBaseTreeview.showContextMenuFunction($event, $index)"
+        wi-element-ready="wiBaseTreeview.onReadyFunction();">
         <div class="wi-parent-content">
             <div class="icon-expanded"
                 ng-click="wiBaseTreeview.onCollapse($index)">
                 <i aria-hidden="true" class="fa"
                 ng-class="
-            {'fa-caret-down': item.data.childExpanded,
-            'fa-caret-right': !item.data.childExpanded,
-            'wi-hidden': item.children == null || item.children.length == 0}"></i>
+                    {'fa-caret-down': item.data.childExpanded,
+                    'fa-caret-right': !item.data.childExpanded,
+                    'wi-hidden': item.children == null || item.children.length == 0}"></i>
             </div>
-            <div ng-click="wiBaseTreeview.onclickfunction($index, $event)"
-                ng-dblclick="wiBaseTreeview.ondoubleclickfunction($index)">
+            <div ng-click="wiBaseTreeview.onClick($index, $event)"
+                ng-dblclick="wiBaseTreeview.onDoubleClick($index);">
                 <div class="display-inline-block margin-right-0_5em"><span class="{{item.data.icon}}"></span></div>
                 <span>{{item.data.label}}</span>
-                <span ng-if="wiBaseTreeview.isShowParentName && item.parentData">/ {{item.parentData.label}}</span>                
+                <span ng-if="wiBaseTreeview.isShowParentName && item.parentData">/ {{item.parentData.label}}</span>
             </div>
         </div>
 
         <div class="wi-parent-unit" ng-show="item.data.unit"
-            ng-click="wiBaseTreeview.onclickfunction($index, $event)"
-            ng-dblclick="wiBaseTreeview.ondoubleclickfunction($index)">
+            ng-click="wiBaseTreeview.onClick($index, $event)"
+            ng-dblclick="wiBaseTreeview.onDoubleClick($index)">
             <span class='display-inline-block' style='text-indent:10px;'>{{item.data.unit}}</span>
         </div>
     </div>
 
     <div ng-show="item.data.childExpanded">
-        <wi-base-treeview 
-            contextmenuholder="{{wiBaseTreeview.contextmenuholder}}" 
-            config="item.children" 
+        <wi-base-treeview
             container="wiBaseTreeview.container"
-            onclickfunction='wiBaseTreeview.onclickfunction',
-            ondoubleclickfunction='wiBaseTreeview.ondoubleclickfunction',
-            showcontextmenufunction='wiBaseTreeview.showcontextmenufunction',
-            getitemactivenamefunction='wiBaseTreeview.getitemactivenamefunction'
-            is-show-parent-name="item.data.isCollection"
-            >
+            config="item.children"
+            on-ready-function='wiBaseTreeview.onReadyFunction'
+            on-click-function='wiBaseTreeview.onClickFunction',
+            on-double-click-function='wiBaseTreeview.onDoubleClickFunction',
+            show-context-menu-function='wiBaseTreeview.showContextMenuFunction'
+            is-show-parent-name="item.data.isCollection">
         </wi-base-treeview>
     </div>
 </div>
