--- a/source/components/wi-base-treeview/wi-base-treeview.less
+++ b/source/components/wi-base-treeview/wi-base-treeview.less
@@ -42,6 +42,10 @@ wi-base-treeview {
                         vertical-align: -webkit-baseline-middle;
                     }
                 }
+
+                .actions>wi-button>div>button {
+                    height: 22px;
+                }
             }
         }
 
