add combined plots

--- a/source/components/wi-button/wi-button.less
+++ b/source/components/wi-button/wi-button.less
@@ -42,6 +42,18 @@ wi-button, wi-toolbar-button {
     p {
         margin: 0;
     }
+    .rect-16x16 {
+        width: 16px;
+        height: 16px; 
+        display: inline-block;
+        border: 1px solid black;
+    }
+    .rect-32x32 {
+        width: 32px;
+        height: 32px;
+        display:inline-block;
+        border: 1px solid black;
+    }
 }
 
 .icon-top { 
