--- a/source/less/main.less
+++ b/source/less/main.less
@@ -246,7 +246,7 @@ wi-dropdown.fix-btn-sm p{
 }
 
 input[type].display-none, .display-none {
-    display: none;
+    display: none !important; 
 }
 
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
