--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.html
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.html
@@ -1,3 +1,23 @@
+<div wi-right-click='wiD3Histogram.showContextMenu($event)' style="flex:1;display:flex;flex-direction:column;">
+    <h4>Histogram: {{wiD3Histogram.histogramModel.properties.histogramTitle}}</h4>
+    
+    <h5 ng-show="!wiD3Histogram.histogramModel.properties.idZoneSet && wiD3Histogram.histogramModel.properties.idCurve">
+        Reference({{wiD3Histogram.curveModel.properties.unit}}): [{{wiD3Histogram.histogramModel.properties.intervalDepthTop}} -
+        {{wiD3Histogram.histogramModel.properties.intervalDepthBottom}}]
+    </h5>
+    <h5 ng-show="wiD3Histogram.histogramModel.properties.idZoneSet && wiD3Histogram.histogramModel.properties.idCurve">
+        Filter: [{{wiD3Histogram.zoneSetModel.properties.name}} - Zonation]
+    </h5>
+    <div class='histogram-container'>
+        <div style='display:flex;flex-direction:row;justify-content:space-between;'>
+            <div>{{wiD3Histogram.histogramModel.properties.plotType}}</div>
+            <div>Probability (%)</div>
+        </div>
+        <div id='{{wiD3Histogram.histogramAreaId}}' wi-element-ready='wiD3Histogram.onReady()' class='d3-histogram-region' ng-dblclick='wiD3Histogram.histogramFormat();'></div>
+        <div style='padding-bottom:0.5em;' class='text-center'>{{wiD3Histogram.histogramModel.properties.xLabel}}</div>
+    </div>
+</div>
+<!--
 <div style="display:flex; flex-direction:row">
     <div resizable r-directions="['right']" r-flex="true" ng-show="wiD3Histogram.isShowWiZone" style="min-width:10%;max-width:20%">
         <wi-container title='Zone' close-handler='wiD3Histogram.CloseZone'>
@@ -109,3 +129,4 @@
         </wi-container>
     </div>
 </div>
+-->
