update wi-multi-input, add wi-processing api

--- a/source/components/wi-multi-input/wi-multi-input.html
+++ b/source/components/wi-multi-input/wi-multi-input.html
@@ -1,4 +1,4 @@
-<div class="dropdown"  uib-dropdown>
+<div class="dropdown" uib-dropdown auto-close="outsideClick">
     <button class="btn btn-default dropdown-toggle multi-input-selected" uib-dropdown-toggle id="dropdownMenu">
         <span ng-if="wiMultiInput.model.type == 'value'">
             {{wiMultiInput.SelectedValue}}
