object-track: drag out of viewport and optimize for better performance

--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -70,6 +70,7 @@
         }
         .ui-resizable-handle:hover {
             background-color: #999;
+            position: absolute;
         }
 
         .vi-object-tooltip {
