--- a/source/less/main.less
+++ b/source/less/main.less
@@ -90,9 +90,9 @@ span, h4, h5, p {
     vertical-align: top;
 }
 
-div.lm_content {
-    overflow-y: auto;
-}
+// div.lm_content {
+//     overflow-y: auto;
+// }
 
 .label_treeview{
     border-bottom: 1px solid #cacbd3;
@@ -105,16 +105,20 @@ div.lm_content {
     background: -ms-linear-gradient(top, rgba(248,248,249,1) 0%, rgba(242,243,244,1) 100%);
     background: linear-gradient(to bottom, rgba(248,248,249,1) 0%, rgba(242,243,244,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8f8f9', endColorstr='#f2f3f4', GradientType=0 );
+    display: flex;
     span{
         text-align: left;
-        display: inline-block;
+        display: flex;
         text-indent: 10px;
     }
-    span:first-child{}
+    span:first-child{
+        flex: 3;
+    }
     span:last-child{
-        width: 100px;
+        // width: 100px;
+        flex: 1;
         border-left: 1px solid #cacbd3;
-        float: right;
+        // float: right;
     }
 }
 .block-right {
