--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -51,6 +51,13 @@
     }
 }
 
+.vi-depth-track-container {
+    .tick line {
+        stroke: gray;
+        stroke-width: 1;
+    }
+}
+
 .vi-object-track-container {
 
     .vi-track-plot-container {
@@ -157,7 +164,7 @@
         .tooltip-rect {
             stroke: #666;
             stroke-width: 1px;
-            fill: #ffffa0;
+            fill: rgba(255, 255, 160, 0.4);
             font-size: 10;
         }
 
@@ -178,6 +185,23 @@
     .vi-track-axis {
         .domain {
             display: none;
+        }
+        .tick {
+            line {
+                //stroke: rgba(0,118,118,1);
+                stroke: LightGray;
+                //stroke-dasharray: 20, 2;
+                stroke-width: 1;
+                stroke-opacity: 0.3;
+            }
+        }
+        .tick.major {
+            line {
+                //stroke: rgba(0,118,118,1);
+                stroke: LightGray;
+                //stroke-dasharray: 0;
+                stroke-opacity: 0.8;
+            }
         }
     }
 }
@@ -299,18 +323,4 @@
     z-index: 2;
     height: 100%;
 }
-.tick {
-    line {
-        stroke: rgba(0,118,118,1);
-        stroke-dasharray: 20, 2;
-        stroke-width: 1;
-        stroke-opacity: 0.3;
-    }
-}
-.tick.major {
-    line {
-        stroke: rgba(0,118,118,1);
-        stroke-dasharray: 0;
-        stroke-opacity: 0.8;
-    }
-}
+
