Adjust track ticks

--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -52,9 +52,14 @@
 }
 
 .vi-depth-track-container {
-    .tick line {
-        stroke: gray;
-        stroke-width: 1;
+    .tick  {
+        line {
+            stroke: gray;
+            stroke-width: 1;
+        }
+        text {
+            font-weight: bold;
+        }
     }
 }
 
