--- a/source/components/wi-list/wi-list.html
+++ b/source/components/wi-list/wi-list.html
@@ -5,7 +5,7 @@
 </p>
 <table ng-show='wiList.shown'>
     <tr ng-repeat="item in wiList.items">
-        <td>
+        <td title="{{item.label}}">
             {{item.label}}
         </td>
         <td>
