--- a/source/less/main.less
+++ b/source/less/main.less
@@ -90,9 +90,15 @@ span, h4, h5, p {
     vertical-align: top;
 }
 
-// div.lm_content {
-//     overflow-y: auto;
-// }
+.lm_splitter.lm_horizontal .lm_drag_handle {
+    width: 5px;
+    left: unset;
+}
+
+.lm_splitter.lm_vertical .lm_drag_handle {
+    height: 5px;
+    top: unset;
+}
 
 .label_treeview{
     border-bottom: 1px solid #cacbd3;
