--- a/source/components/wi-base-treeview/wi-base-treeview.html
+++ b/source/components/wi-base-treeview/wi-base-treeview.html
@@ -19,7 +19,7 @@
             <div ng-click="wiBaseTreeview.onClick($index, $event)"
                 ng-dblclick="wiBaseTreeview.onDoubleClick($index);">
                 <div class="display-inline-block margin-right-0_5em"><span class="{{item.data.icon}}"></span></div>
-                <span>{{item.data.label}}</span>
+                <span title="{{item.data.label}}">{{item.data.label}}</span>
                 <span ng-if="wiBaseTreeview.isShowParentName && item.parentData">/ {{item.parentData.label}}</span>
                 <span ng-if="wiBaseTreeview.isShowParentName && item.parentDataArr" ng-repeat="parentData in item.parentDataArr">/ {{parentData.label}}&nbsp;</span>
                 <div class="pull-right actions">
@@ -31,7 +31,7 @@
         <div class="wi-parent-unit" ng-show="item.data.unit"
             ng-click="wiBaseTreeview.onClick($index, $event)"
             ng-dblclick="wiBaseTreeview.onDoubleClick($index)">
-            <span class='display-inline-block' style='text-indent:10px;'>{{item.data.unit}}</span>
+            <span class='display-inline-block' style='text-indent:10px;' title="{{item.data.unit}}">{{item.data.unit}}</span>
         </div>
     </div>
 
