--- a/source/app/components/wi-reference-window/wi-reference-window.less
+++ b/source/app/components/wi-reference-window/wi-reference-window.less
@@ -17,7 +17,8 @@ wi-reference-window {
             margin-top: 0.3em;
             padding: 0.2em 0.5em;
             background-color: white;
-            min-height: 80px;
+            height: 80px;
+            overflow: overlay;
         }
         svg.grid-svg {
             position: absolute;
