--- a/source/components/wi-button/wi-button.less
+++ b/source/components/wi-button/wi-button.less
@@ -77,6 +77,7 @@ wi-button, wi-toolbar-button {
     width: 16px;
     height: 16px;
     margin-right: 5px;
+    font-size: 16px;
 }
 
 .checked-off {
