--- a/source/less/main.less
+++ b/source/less/main.less
@@ -468,3 +468,9 @@ input[type].display-none, .display-none {
 .font-weight-normal {
     font-weight: normal;
 }
+.font-size-16 {
+    font-size: 16px;
+}
+.font-size-32 {
+    font-size: 32px;
+}
