update css wi-ref-win

--- a/source/app/components/wi-reference-window/wi-reference-window.less
+++ b/source/app/components/wi-reference-window/wi-reference-window.less
@@ -19,6 +19,11 @@ wi-reference-window {
             background-color: white;
             height: 80px;
             overflow: overlay;
+            &>div.infoItem{
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+            }
         }
         svg.grid-svg {
             position: absolute;
