--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -158,7 +158,8 @@
     }
 
     .vi-track-svg-container {
-        border: 1px solid black;
+        border-left: 1px solid black;
+        border-right: 1px solid black;
 
         .tooltip-line {
             stroke: black;
