fix update scale logplot

--- a/source/app/components/wi-d3/wi-d3.less
+++ b/source/app/components/wi-d3/wi-d3.less
@@ -5,11 +5,11 @@ wi-d3 {
     display:flex;
     .d3-region {
         position: relative;
-        //border: 1px solid blue;
         display: flex;
         position: relative;
         //width: 100%;
         flex: 1;
+        padding-left: 3px;
         .d3-region-svg {
             position: absolute;
             z-index: 10;
