--- a/source/app/components/wi-logplot/wi-logplot.less
+++ b/source/app/components/wi-logplot/wi-logplot.less
@@ -36,6 +36,7 @@ wi-logplot {
         .track-area {
             background-color: #fff;
             margin: 4px;
+            margin-left: 0;
             flex: 1;
             display: flex;
             flex-direction: row;
