--- a/source/app/components/wi-d3/wi-d3.html
+++ b/source/app/components/wi-d3/wi-d3.html
@@ -1,3 +1,3 @@
 <div wi-right-click='wiD3.showContextMenu($event)' id='{{wiD3.plotAreaId}}' class='d3-region'>
-    <svg id='{{wiD3.svgId}}' class='d3-region-svg' width='100%' height='100%'></svg>
+ <!--    <svg id='{{wiD3.svgId}}' class='d3-region-svg' width='100%' height='100%'></svg> -->
 </div>
