object track: fixed point symbol and some bug

--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -2,6 +2,11 @@
     position: absolute;
 }
 
+
+.vi-track-container:not(.vi-log-track-container) {
+    z-index: 0;
+}
+
 .vi-zone-track-container {
 
     .vi-track-plot-container {
