--- a/source/less/main.less
+++ b/source/less/main.less
@@ -36,9 +36,9 @@ body{
     -ms-user-select: none;
     user-select: none;
 }
-span, h4, h5, p {
-    cursor: default;
-}
+// span, h4, h5, p {
+//     cursor: default;
+// }
 .wi-hidden {
   visibility: hidden;
 }
