update crossplot css margin-left

--- a/source/app/components/wi-d3-crossplot/wi-d3-crossplot.less
+++ b/source/app/components/wi-d3-crossplot/wi-d3-crossplot.less
@@ -59,7 +59,7 @@ wi-d3-crossplot {
         overflow-x:hidden
     }
     .crossplot-container {
-        border: 1px solid #e5e5e5;
+        // border: 1px solid #e5e5e5;
         display: flex;
         flex-direction: column;
         flex: 1;
