--- a/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
+++ b/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
@@ -4,7 +4,7 @@
       <wi-zone name="{{wiD3Crossplot.getZoneName();}}" zones="wiD3Crossplot.zoneArr" active-zone="wiD3Crossplot.crossplotModel.properties.pointsets[0].activeZone" on-zone-ctrl-ready="wiD3Crossplot.onZoneCtrlReady"></wi-zone>
     </wi-container>
   </div>
-  <div class='d3-crossplot-region' style="flex:1;display:flex; flex-direction:column;">
+  <div class='d3-crossplot-region' style="flex:1;display:flex; flex-direction:column;margin-left:14px">
     <!-- <h4>Crossplot: {{wiD3Crossplot.crossplotModel.properties.name}}</h4>
     <h5>Reference: [{{wiD3Crossplot.wellProperties.topDepth}} - {{wiD3Crossplot.wellProperties.bottomDepth}}]</h5> -->
     <div class='crossplot-container'>
