--- a/source/less/main.less
+++ b/source/less/main.less
@@ -86,6 +86,12 @@ body{
 .lm_header .lm_tab .lm_title{
     font-weight: bold;
 }
+.lm_tabdropdown_list > .lm_tab{
+    min-width: -webkit-fill-available;
+    >.lm_title {
+        width: 100% !important;
+    }
+}
 .lm_title span {
     vertical-align: top;
 }
