--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.html
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.html
@@ -2,8 +2,8 @@
     <h4>Histogram: {{wiD3Histogram.histogramModel.properties.histogramTitle}}</h4>
     
     <h5 ng-show="!wiD3Histogram.histogramModel.properties.idZoneSet && wiD3Histogram.histogramModel.properties.idCurve">
-        Reference({{wiD3Histogram.curveModel.properties.unit}}): [{{wiD3Histogram.histogramModel.properties.intervalDepthTop}} -
-        {{wiD3Histogram.histogramModel.properties.intervalDepthBottom}}]
+        Reference({{wiD3Histogram.curveModel.properties.unit}}): [{{wiD3Histogram.histogramModel.properties.intervalDepthTop | toFixed2 }} -
+        {{wiD3Histogram.histogramModel.properties.intervalDepthBottom | toFixed2 }}]
     </h5>
     <h5 ng-show="wiD3Histogram.histogramModel.properties.idZoneSet && wiD3Histogram.histogramModel.properties.idCurve">
         Filter: [{{wiD3Histogram.zoneSetModel.properties.name}} - Zonation]
@@ -13,7 +13,7 @@
             <div>{{wiD3Histogram.histogramModel.properties.plotType}}</div>
             <div>Probability (%)</div>
         </div>
-        <div id='{{wiD3Histogram.histogramAreaId}}' wi-element-ready='wiD3Histogram.onReady()' class='d3-histogram-region' ng-dblclick='wiD3Histogram.histogramFormat();'></div>
+        <div id='{{wiD3Histogram.histogramAreaId}}' wi-element-ready='wiD3Histogram.onReady()' class='d3-histogram-region' ng-dblclick='$event.stopPropagation();wiD3Histogram.histogramFormat();'></div>
         <div style='padding-bottom:0.5em;' class='text-center'>{{wiD3Histogram.histogramModel.properties.xLabel}}</div>
     </div>
 </div>
