--- a/source/app/components/wi-histogram/wi-histogram.less
+++ b/source/app/components/wi-histogram/wi-histogram.less
@@ -3,6 +3,7 @@ wi-histogram {
   flex-direction: column;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 
   .histogram-toolbar-wrapper {
       display:inline-block;
@@ -46,7 +47,7 @@ wi-histogram {
                 width: 100%; flex: 1; display: flex;
         }
   }
-
+/*
   & > div {
       display:flex;
       flex-direction: column;
@@ -62,8 +63,7 @@ wi-histogram {
           flex: 1;
       }
   }
-  //display:flex;
-  overflow: hidden;
+*/
   .rg-left, .rg-right {
       & > span {
           cursor: col-resize;
@@ -107,12 +107,12 @@ wi-histogram {
       overflow-y:auto;
       overflow-x:hidden
   }
-  .histogram-container {
-      display: flex;
-      flex-direction: column;
-      flex: 1;
-  }
   .wi-small{
       font-size: 85%;
   }
+}
+.histogram-container {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
