--- a/source/app/components/wi-properties/wi-properties.html
+++ b/source/app/components/wi-properties/wi-properties.html
@@ -1,4 +1,4 @@
-<div style="height: 100%; overflow-y: auto;">
+<div style="height: 100%; overflow-y: auto; overflow-x: hidden">
   <wi-list name="{{config.name}}" heading="{{config.heading}}" items="config.data"
            ng-repeat="config in wiProperties.listConfig">
   </wi-list>
