--- a/source/components/wi-list/wi-list.html
+++ b/source/components/wi-list/wi-list.html
@@ -9,7 +9,7 @@
             {{item.label}}
         </td>
         <td>
-            <input class="width-95-percent" ng-if="!item.type" type="text" ng-model="item.value" ng-disabled="!item.editable"
+            <input class="width-95-percent" ng-if="!item.type" type="text" ng-model="item.value" title="{{item.value}}" ng-disabled="!item.editable"
             wi-enter="$event.currentTarget.blur();" ng-blur="wiList.onChange(item)">
             <input class="width-95-percent" ng-if="item.type == 'checkbox'" type="checkbox" ng-model="item.value" ng-disabled="!item.editable" ng-change="wiList.onChange(item)">
             <select class="width-95-percent" ng-if="item.type == 'select'" ng-model="item.value"
