--- a/source/less/main.less
+++ b/source/less/main.less
@@ -81,10 +81,11 @@ body{
     background: -ms-linear-gradient(top, rgba(247,247,248,1) 0%, rgba(225,225,225,1) 100%);
     background: linear-gradient(to bottom, rgba(247,247,248,1) 0%, rgba(225,225,225,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f8', endColorstr='#e1e1e1', GradientType=0 );
+    font-weight: bold;
 }
 
 .lm_header .lm_tab .lm_title{
-    font-weight: bold;
+    padding-top: 0;
 }
 .lm_tabdropdown_list > .lm_tab{
     min-width: -webkit-fill-available;
@@ -93,7 +94,8 @@ body{
     }
 }
 .lm_title span {
-    vertical-align: top;
+    vertical-align: middle;
+    line-height: 100%;
 }
 
 .lm_splitter.lm_horizontal .lm_drag_handle {
