--- a/source/components/wi-tabs/wi-tab.less
+++ b/source/components/wi-tabs/wi-tab.less
@@ -6,7 +6,7 @@ wi-tabset {
     border-bottom: 1px solid #a8aab4;
   }
   wi-tab {
-    display: block;   
+    display: block;
     & > div{
       border-bottom: 1px solid #a8aab4;
       border-right: 1px solid #a8aab4;
@@ -19,7 +19,7 @@ wi-tabset {
       background: -ms-linear-gradient(top, rgba(255,255,255,1) 13%, rgba(250,250,252,1) 42%, rgba(240,241,245,1) 100%);
       background: linear-gradient(to bottom, rgba(255,255,255,1) 13%, rgba(250,250,252,1) 42%, rgba(240,241,245,1) 100%);
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f0f1f5', GradientType=0 );
-      }      
+      }
 
   }
 
@@ -27,8 +27,9 @@ wi-tabset {
     border: 1px solid #a8aab4;
     border-bottom-color: transparent;
     background: #fff;
-    border-radius:2px; 
+    border-radius:2px;
     box-shadow: 3px -2px 2px -2px rgba(0,0,0,0.13);
+    padding-top: 2px;
   }
   /* khu border */
   li.wi-tab.active > a,
@@ -60,5 +61,9 @@ wi-tabset {
         opacity: 1;
       }
     }
+  }
+
+  .toggle button {
+    padding: 3px;
   }
 }
