--- a/source/less/main.less
+++ b/source/less/main.less
@@ -82,6 +82,7 @@ body{
     background: linear-gradient(to bottom, rgba(247,247,248,1) 0%, rgba(225,225,225,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f8', endColorstr='#e1e1e1', GradientType=0 );
     font-weight: bold;
+    color: #333333;
 }
 
 .lm_header .lm_tab .lm_title{
